// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with one expense correctly 1`] = `
<div>
  <h1>
    Viewing 
    1 expense 
    totalling 
    1,00 €
  </h1>
</div>
`;

exports[`should render ExpensesSummary with two expenses correctly 1`] = `
<div>
  <h1>
    Viewing 
    2 expenses 
    totalling 
    3,00 €
  </h1>
</div>
`;
